core: ajust footer and create button add

--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
           </div>
           <p class="time">14:00 - 15:00 (1 hora)</p>
           <div class="card-buttons">
-            <button class="video-call">Ligar por vídeo</button>
-            <button class="audio-call">Ligar por áudio</button>
+            <button class="address">Ver endereço</button>
           </div>
         </div>
         <div class="card remote-meet">
@@ -83,26 +82,56 @@
             <button class="audio-call">Ligar por áudio</button>
           </div>
         </div>
-        <button class="add-card"></button>
+        <div class="card local-meet">
+          <div class="card-user">
+            <img
+              src="https://images.unsplash.com/photo-1580489944761-15a19d654956?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHJvc3RvfGVufDB8fDB8fHww"
+              alt="imagem de perfil do usuário"
+            />
+            <div>
+              <strong>Larissa Santana</strong>
+              <p>
+                <i class="fa-solid fa-video"></i>
+                <span>Consulta remota</span>
+              </p>
+            </div>
+            <i class="fa-regular fa-message"></i>
+          </div>
+          <p class="time">14:00 - 15:00 (1 hora)</p>
+          <div class="card-buttons">
+            <button class="address">Ver endereço</button>
+          </div>
+        </div>
       </div>
     </main>
     <footer>
+      <button class="add-btn"><i class="fa-solid fa-plus"></i></button>
+      <button class="location-btn"><i class="fa-solid fa-location-dot"></i></button>
+      <button class="time-btn"><i class="fa-regular fa-clock"></i></button>
       <nav>
         <div class="page calendar">
-          <i class="fa-regular fa-calendar"></i>
-          <a href="#">Consultas</a>
+          <a href="#">
+            <i class="fa-regular fa-calendar"></i>
+            Consultas</a
+          >
         </div>
         <div class="page users">
-          <i class="fa-regular fa-calendar"></i>
-          <a href="#">Clientes</a>
+          <a href="#">
+            <i class="fa-regular fa-calendar"></i>
+            Clientes</a
+          >
         </div>
         <div class="page chart">
-          <i class="fa-solid fa-chart-simple"></i>
-          <a href="#">Relatórios</a>
+          <a href="#">
+            <i class="fa-solid fa-chart-simple"></i>
+            Relatórios</a
+          >
         </div>
         <div class="page menu">
-          <i class="fa-solid fa-bars"></i>
-          <a href="#">Menu</a>
+          <a href="#">
+            <i class="fa-solid fa-bars"></i>
+            Menu</a
+          >
         </div>
       </nav>
     </footer>
