--- a/index.html
+++ b/index.html
@@ -105,9 +105,16 @@
       </div>
     </main>
     <footer>
-      <button class="add-btn"><i class="fa-solid fa-plus"></i></button>
-      <button class="location-btn"><i class="fa-solid fa-location-dot"></i></button>
-      <button class="time-btn"><i class="fa-regular fa-clock"></i></button>
+      <input type="checkbox" name="add" id="add" />
+      <label class="add" for="add">
+        <i class="fa-solid fa-plus"></i>
+      </label>
+      <button class="location-btn">
+        <i class="fa-solid fa-location-dot"></i>
+      </button>
+      <button class="time-btn">
+        <i class="fa-regular fa-clock"></i>
+      </button>
       <nav>
         <div class="page calendar">
           <a href="#">
