--- a/index.html
+++ b/index.html
@@ -20,86 +20,88 @@
     <main>
       <div>
         <h2 class="container-day">Hoje</h2>
-        <div class="card remote-meet">
-          <div class="card-user">
-            <img
-              src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8cm9zdG98ZW58MHx8MHx8fDA%3D"
-              alt="imagem de perfil do usuário"
-            />
-            <div>
-              <strong>Luciana Dias</strong>
-              <p>
-                <i class="fa-solid fa-video"></i>
-                <span>Consulta remota</span>
-              </p>
+        <div class="card-container">
+          <div class="card remote-meet">
+            <div class="card-user">
+              <img
+                src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8cm9zdG98ZW58MHx8MHx8fDA%3D"
+                alt="imagem de perfil do usuário"
+              />
+              <div>
+                <strong>Luciana Dias</strong>
+                <p>
+                  <i class="fa-solid fa-video"></i>
+                  <span>Consulta remota</span>
+                </p>
+              </div>
+              <i class="fa-regular fa-message"></i>
             </div>
-            <i class="fa-regular fa-message"></i>
-          </div>
-          <p class="time">14:00 - 15:00 (1 hora)</p>
-          <div class="card-buttons">
-            <button class="video-call">Ligar por vídeo</button>
-            <button class="audio-call">Ligar por áudio</button>
-          </div>
-        </div>
-        <div class="card local-meet">
-          <div class="card-user">
-            <img
-              src="https://images.unsplash.com/photo-1580489944761-15a19d654956?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHJvc3RvfGVufDB8fDB8fHww"
-              alt="imagem de perfil do usuário"
-            />
-            <div>
-              <strong>Larissa Santana</strong>
-              <p>
-                <i class="fa-solid fa-video"></i>
-                <span>Consulta remota</span>
-              </p>
+            <p class="time">14:00 - 15:00 (1 hora)</p>
+            <div class="card-buttons">
+              <button class="video-call">Ligar por vídeo</button>
+              <button class="audio-call">Ligar por áudio</button>
             </div>
-            <i class="fa-regular fa-message"></i>
           </div>
-          <p class="time">14:00 - 15:00 (1 hora)</p>
-          <div class="card-buttons">
-            <button class="address">Ver endereço</button>
-          </div>
-        </div>
-        <div class="card remote-meet">
-          <div class="card-user">
-            <img
-              src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHJvc3RvfGVufDB8fDB8fHww"
-              alt="imagem de perfil do usuário"
-            />
-            <div>
-              <strong>Marcos Correia</strong>
-              <p>
-                <i class="fa-solid fa-video"></i>
-                <span>Consulta remota</span>
-              </p>
+          <div class="card local-meet">
+            <div class="card-user">
+              <img
+                src="https://images.unsplash.com/photo-1580489944761-15a19d654956?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHJvc3RvfGVufDB8fDB8fHww"
+                alt="imagem de perfil do usuário"
+              />
+              <div>
+                <strong>Larissa Santana</strong>
+                <p>
+                  <i class="fa-solid fa-video"></i>
+                  <span>Consulta remota</span>
+                </p>
+              </div>
+              <i class="fa-regular fa-message"></i>
             </div>
-            <i class="fa-regular fa-message"></i>
-          </div>
-          <p class="time">14:00 - 15:00 (1 hora)</p>
-          <div class="card-buttons">
-            <button class="video-call">Ligar por vídeo</button>
-            <button class="audio-call">Ligar por áudio</button>
-          </div>
-        </div>
-        <div class="card local-meet">
-          <div class="card-user">
-            <img
-              src="https://images.unsplash.com/photo-1580489944761-15a19d654956?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHJvc3RvfGVufDB8fDB8fHww"
-              alt="imagem de perfil do usuário"
-            />
-            <div>
-              <strong>Larissa Santana</strong>
-              <p>
-                <i class="fa-solid fa-video"></i>
-                <span>Consulta remota</span>
-              </p>
+            <p class="time">14:00 - 15:00 (1 hora)</p>
+            <div class="card-buttons">
+              <button class="address">Ver endereço</button>
             </div>
-            <i class="fa-regular fa-message"></i>
           </div>
-          <p class="time">14:00 - 15:00 (1 hora)</p>
-          <div class="card-buttons">
-            <button class="address">Ver endereço</button>
+          <div class="card remote-meet">
+            <div class="card-user">
+              <img
+                src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHJvc3RvfGVufDB8fDB8fHww"
+                alt="imagem de perfil do usuário"
+              />
+              <div>
+                <strong>Marcos Correia</strong>
+                <p>
+                  <i class="fa-solid fa-video"></i>
+                  <span>Consulta remota</span>
+                </p>
+              </div>
+              <i class="fa-regular fa-message"></i>
+            </div>
+            <p class="time">14:00 - 15:00 (1 hora)</p>
+            <div class="card-buttons">
+              <button class="video-call">Ligar por vídeo</button>
+              <button class="audio-call">Ligar por áudio</button>
+            </div>
+          </div>
+          <div class="card local-meet">
+            <div class="card-user">
+              <img
+                src="https://images.unsplash.com/photo-1580489944761-15a19d654956?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHJvc3RvfGVufDB8fDB8fHww"
+                alt="imagem de perfil do usuário"
+              />
+              <div>
+                <strong>Larissa Santana</strong>
+                <p>
+                  <i class="fa-solid fa-video"></i>
+                  <span>Consulta remota</span>
+                </p>
+              </div>
+              <i class="fa-regular fa-message"></i>
+            </div>
+            <p class="time">14:00 - 15:00 (1 hora)</p>
+            <div class="card-buttons">
+              <button class="address">Ver endereço</button>
+            </div>
           </div>
         </div>
       </div>
